syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "LotteryGame.Orchestrators.Api.Models.Protos.PlayerProfile";

package profiles;

service PlayerProfile {
    rpc Get (ProfileProtoRequest) returns (ProfileProtoResponse);
}

message ProfileProtoRequest {
    int32 playerId = 1;
}

enum PrizeTierProto {
    GRAND = 0;
    SECOND = 1;
    THIRD = 2;
}

message PrizeProto {
    int64 amount = 1;
    PrizeTierProto tier = 2;
}

enum TicketStatusProto {
	PENDING = 0;
	CONFIRMED = 1;
	CANCELLED = 2;
	SETTLED = 3;
}

message TicketProfileProto {
	string ticketNumber = 1;
	TicketStatusProto status = 2;
    PrizeProto prize = 3;
}

enum DrawStatusProto {
    DRAW_PENDING = 0;
    IN_PROGRESS = 1;
    COMPLETED = 2;
    DRAW_CANCELLED = 3;
}

message DrawProto {
    string drawId = 1;
    google.protobuf.Timestamp drawDate = 2;
    DrawStatusProto status = 3;
    int64 ticketPriceInCents = 4;
    int32 currentPlayersInDraw = 5;
    repeated TicketProfileProto tickets = 6;
}

message DrawOptionsProto {
    int64 ticketPriceInCents = 1;
    int32 minTicketsPerPlayer = 2;
    int32 maxTicketsPerPlayer = 3;
    int32 minPlayersInDraw = 4;
    int32 maxPlayersInDraw = 5;
}

message ProfileProtoResponse {
    bool success = 1;
    string errorMsg = 2;
    int64 realBalance = 3;
    int64 bonusBalance = 4;
    DrawOptionsProto drawOptions = 5; 
}
